[tool.poetry]
name = "wichteln"
version = "0.1.0"
description = "A small streamlit app to mix and match a secret santa style gift exchange"
authors = ["David Hinrichs <dvd.hnrchs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
